# cc-agent-teams

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
agent_team/: __init__.py  cli.py  config.py  db.py  launcher.py  mcp_server.py  models.py  prompt.py  tmux.py  wake.py
config/: providers_example.yaml  roles.yaml
docs/: USER_GUIDE.md
tests/: test_config.py  test_db.py  test_mcp_server.py
