[project]
name = "agent-team"
version = "0.1.0"
description = "Multi-model Agent Team orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.47.0",
    "click>=8.4.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.13.0",
    "httpx>=0.28.0",
]

[project.scripts]
agent-team = "agent_team.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
